--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center mb-5">
+            <div class="text-center mb-5 pb-5">
                 <h1 class="mt-5 text-primary" id="output"></h1>
             </div>
         </div>
