--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <h1 class="text-center mt-5 mb-3">Activity: Class Based Objects Blueprint</h1>
             <span class="d-flex flex-row justify-content-center align-items-center mb-3 px-3">
-                <h1>Sample Output:</h1> <h2 class="ms-5 p-2 text-bg-dark">James' weigth in lbs is 140 lbs</h2>
+                <h1>Sample Output:</h1> <h2 class="ms-5 p-2 text-bg-dark">James' weigth in lbs is 140</h2>
             </span>
             <h1>Instruction:</h1>
             <ul class="mb-5">
