--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Instruction:</h1>
             <ul class="mb-5">
                 <li>
-                    <h3>Calculate the weight based on user's input in kilogrma/s (kg).</h3>
+                    <h3>Calculate the weight based on user's input in kilogram/s (kg).</h3>
                 </li>
                 <li>
                     <h3>Create a function that displays the converted weight in pounds.</h3>
